[package]
name = "padding_oracle"
version = "0.1.0"
authors = ["Alexander Lodin <lodin.alex@gmail.com>"]

[dependencies]
#env_logger = "*"
actix = { version = "0.7", default-features = false }
actix-web = { version = "0.7", features=["alpn"] }

openssl = "0.10.11"
serde = "*"
serde_derive = "*"

lazy_static = "*"